--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -8,18 +8,62 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
 
+
+    @media(max-width: 1200px) {
+        padding: 80px 100px;
+
+
+    }
+
+    @media(max-width: 800px) {
+         padding: 80px 63px;
+
+        background-position: top left;
+
+    }
+
+    @media(max-width: 550px) {
+        padding: 75px 20px;
+    }
+
+    @media(max-width: 400px) {
+        padding: 75px 20px;
+
+    }
+
     &__logo {
         position: absolute;
         top: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
 
-        p {
-            font-size: 18px;
-
-            &:last-child {
-                font-weight: 300;
-            }
+        @media(max-width: 550px) {
+            padding-top: 10px;
         }
+
+
     }
+
+    &__caption {
+        letter-spacing: 1px;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 16px;
+        font-weight: bold;
+        margin: 0;
+
+        @media(max-width: 550px) {
+            font-size: 10px;
+        }
+
+
+        &:last-child {
+            font-weight: 300;
+        }
+
+
+    }
+
 
 
     h1 {
@@ -28,6 +72,20 @@
         letter-spacing: 4px;
         font-size: 40px;
         letter-spacing: 2px;
+
+        @media(max-width: 600px) {
+            padding-top: 20px;
+        }
+
+
+        @media(max-width: 550px) {
+            font-size: 25px;
+            padding-top: 10px;
+        }
+
+        @media(max-width: 450px) {
+            font-size: 20px;
+        }
 
     }
 
@@ -38,48 +96,155 @@
         padding: 50px 0;
         text-align: center;
         letter-spacing: 2px;
+
+        @media(max-width: 1200px) {
+            padding: 0;
+
+        }
+
+        @media(max-width: 600px) {
+            font-size: 25px;
+
+        }
     }
+
+
 
     p {
         text-align: left;
 
     }
 
-
     &:nth-child(3) {
         background: url(../img/banner1.jpg) no-repeat;
         background-position: center auto;
         background-size: 100% auto;
+        background-attachment: fixed;
+        display:flex;
+        align-items: center;
+            @media(max-width: 1200px) {
+            background-size:cover;
+
+    }
+            @media(max-width: 1000px) {
+            background-attachment:local;
+
+    }
+            @media(max-width: 400px) {
+            background-size: cover;
+
+    }
+    
     }
 
     &:nth-child(5) {
         background: url(../img/banner2.jpg) no-repeat;
         background-position: center auto;
         background-size: 100% auto;
+        background-attachment: fixed;
+        display:flex;
+        align-items: center;
+            @media(max-width: 1200px) {
+            background-size:cover;
+
+    }
+            @media(max-width: 1000px) {
+            background-attachment:local;
+
+    }
+            @media(max-width: 400px) {
+            background-size: cover;
+
+    }
+    
     }
 
     &:nth-child(7) {
         background: url(../img/banner3.jpg) no-repeat;
         background-position: center auto;
         background-size: 100% auto;
+        background-attachment: fixed;
+        display:flex;
+        align-items: center;
+            @media(max-width: 1200px) {
+            background-size:cover;
+
+    }
+            @media(max-width: 1000px) {
+            background-attachment:local;
+
+    }
+            @media(max-width: 400px) {
+            background-size: cover;
+
+    }
+    
     }
 
     &:nth-child(9) {
         background: url(../img/banner4.jpg) no-repeat;
         background-position: center auto;
         background-size: 100% auto;
+        background-attachment: fixed;
+        display:flex;
+        align-items: center;
+            @media(max-width: 1200px) {
+            background-size:cover;
+
+    }
+            @media(max-width: 1000px) {
+            background-attachment:local;
+
+    }
+            @media(max-width: 400px) {
+            background-size: cover;
+
+    }
+    
     }
 
     &:nth-child(11) {
         background: url(../img/banner5.jpg) no-repeat;
         background-position: center auto;
         background-size: 100% auto;
+        background-attachment: fixed;
+        display:flex;
+        align-items: center;
+            @media(max-width: 1200px) {
+            background-size:cover;
+
+    }
+            @media(max-width: 1000px) {
+            background-attachment:local;
+
+    }
+            @media(max-width: 400px) {
+            background-size: cover;
+
+    }
+    
     }
 
     &:nth-child(13) {
         background: url(../img/banner6.jpg) no-repeat;
         background-position: center auto;
         background-size: 100% auto;
+        background-attachment: fixed;
+        display:flex;
+        align-items: center;
+            @media(max-width: 1200px) {
+            background-size:cover;
+
+    }
+            @media(max-width: 1000px) {
+            background-attachment:local;
+
+    }
+            @media(max-width: 400px) {
+            background-size: cover;
+
+    }
+    
     }
 
 
