--- a/sass/global.scss
+++ b/sass/global.scss
@@ -4,6 +4,9 @@
     //font-family: 'Montserrat', sans-serif;
     margin: auto;
 }
+body {
+    overflow-x: hidden;
+}
 
 .wrapper {
     padding: 0 230px;
