--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,9 @@
 @import 'header';
 @import 'banner';
 @import 'content';
+@import 'keyframes';
 
 
 
 
-@import 'https://fonts.googleapis.com/css?family=Montserrat:300,700|Source+Sans+Pro:400,700i"';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:300,700|Source+Sans+Pro:300,400,700i"';
