--- a/sass/global.scss
+++ b/sass/global.scss
@@ -11,3 +11,11 @@ body {
 .wrapper {
     padding: 0 230px;
 }
+
+h1, h2 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+    margin-top: 20px;
+}
