--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,4 @@
 
 
 @import 'https://fonts.googleapis.com/css?family=Montserrat:300,700|Source+Sans+Pro:300,400,700i"';
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700');
